CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_phone_hist__x/fields/cde_type_phone__c.field-meta.xml
<CustomField>
    <fullName>cde_type_phone__c</fullName>
    <description>cde_type_phone</description>
    <externalDeveloperName>cde_type_phone</externalDeveloperName>
    <label>Phone Number Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>