CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_phone_hist__x/fields/DTE_CHANGE_LAST__c.field-meta.xml
<CustomField>
    <fullName>DTE_CHANGE_LAST__c</fullName>
    <description>lastmodifieddate</description>
    <externalDeveloperName>lastmodifieddate</externalDeveloperName>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>