CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_phone_hist__x/fields/idn_sbsd_case_phone__c.field-meta.xml
<CustomField>
    <fullName>idn_sbsd_case_phone__c</fullName>
    <description>idn_sbsd_case_phone</description>
    <externalDeveloperName>idn_sbsd_case_phone</externalDeveloperName>
    <label>Phone Number ID</label>
    <length>50</length>
    <referenceTargetField>T_SBSD_CASE_PHONE__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_SBSD_CASE_PHONE__c</referenceTo>
    <relationshipLabel>Case Phone Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_sbsd_case_phone_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>