CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_phone_hist__x/fields/idn_sbsd_case_phone_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_sbsd_case_phone_hist__c</fullName>
    <description>idn_sbsd_case_phone_hist</description>
    <externalDeveloperName>idn_sbsd_case_phone_hist</externalDeveloperName>
    <label>Phone Number ID History</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>