CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_phone_hist__x/fields/IDN_USER_CHANGE_LAST__c.field-meta.xml
<CustomField>
    <fullName>IDN_USER_CHANGE_LAST__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lastmodifiedbyid</description>
    <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
    <label>Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>sfrosit_t_sbsd_case_phone_hist1</relationshipName>
    <type>Lookup</type>
</CustomField>