CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_phone_hist__x/fields/nam_cntc_emerg__c.field-meta.xml
<CustomField>
    <fullName>nam_cntc_emerg__c</fullName>
    <description>nam_cntc_emerg</description>
    <externalDeveloperName>nam_cntc_emerg</externalDeveloperName>
    <label>Emergency contact Name?</label>
    <length>30</length>
    <type>Text</type>
</CustomField>