CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_phone_hist__x/fields/nbr_seq_phone__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_phone__c</fullName>
    <description>nbr_seq_phone</description>
    <externalDeveloperName>nbr_seq_phone</externalDeveloperName>
    <label>Number Sequence phone</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>