CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_phone_hist__x/fields/txt_time_call_best__c.field-meta.xml
<CustomField>
    <fullName>txt_time_call_best__c</fullName>
    <description>txt_time_call_best</description>
    <externalDeveloperName>txt_time_call_best</externalDeveloperName>
    <label>Best call time?</label>
    <length>40</length>
    <type>Text</type>
</CustomField>